@@ -599,6 +599,7 @@ Some default configuration options have changed:
 * (bug 6461) Link to page histories in Special:Newpages
 * (bug 6484) Don't do message transformations when preloading messages for editing
 * (bug 6201) Treat spaces as underscores in parameters to {{ns:}}
+* (bug 6006) Allow hiding the password change fields using an authentication plugin
 
 == Compatibility ==
 
